--- a/src/pug/components/radiostation.pug
+++ b/src/pug/components/radiostation.pug
@@ -6,7 +6,7 @@ div.radiostation
 		.radio-item-icon
 			span.icons.icon-play
 			span
-				img(src="/favicon.png" alt="Логотип радиостанции")
+				img(src="favicon.png" alt="Логотип радиостанции")
 		.radio-item-wrap
 			span.station-name
 				|Название радиостанции Название радиостанции
