--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,16 +1,16 @@
 doctype html
 html(lang="ru")
 	head
-		base(href="/")
+		//- base(href="/")
 		meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
 		meta(http-equiv="X-UA-Compatible" content="IE=EmulateIE9")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(name="SKYPE_TOOLBAR" content ="SKYPE_TOOLBAR_PARSER_COMPATIBLE")
 		meta(name="color-scheme" content="only light")
 		meta(name="theme-color" content="#ffffff")
-		link(rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96")
-		link(rel="shortcut icon" href="/favicon.ico")
-		link(type="text/css" rel="stylesheet" href="/css/main.css?" + hash)
+		link(rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96")
+		link(rel="shortcut icon" href="favicon.ico")
+		link(type="text/css" rel="stylesheet" href="css/main.css?" + hash)
 		title
 			|Radio test
 	body
@@ -28,5 +28,5 @@ html(lang="ru")
 						|ProjectSoft
 					=" "
 					|&copy; 2008 - all
-		script(src="/js/radiostation.js?" + hash)
-		script(src="/js/main.js?" + hash)
+		script(src="js/radiostation.js?" + hash)
+		script(src="js/main.js?" + hash)
