--- a/src/less/fonts/jetbrains.less
+++ b/src/less/fonts/jetbrains.less
@@ -5,5 +5,5 @@
 	font-display: swap;
 	src: local('JetBrains Mono Light'),
 		local('JetBrains Mono Light'),
-		url("/fonts/jetbrains.woff2") format("woff2");
+		url("../fonts/jetbrains.woff2") format("woff2");
 }
