--- a/src/less/fonts/bender.less
+++ b/src/less/fonts/bender.less
@@ -5,7 +5,7 @@
 	font-display: swap;
 	src: local('Bender'),
 		local('Bender'),
-		url("/fonts/bender.woff2") format("woff2");
+		url("../fonts/bender.woff2") format("woff2");
 }
 @font-face {
 	font-family: 'Bender';
@@ -14,5 +14,5 @@
 	font-display: swap;
 	src: local('Bender Italic'),
 		local('Bender-Italic'),
-		url("/fonts/bender-italic.woff2") format("woff2");
+		url("../fonts/bender-italic.woff2") format("woff2");
 }
