--- a/src/less/fonts/radioapp.less
+++ b/src/less/fonts/radioapp.less
@@ -11,7 +11,7 @@
 
 @font-face {
 	font-family: "Radio App";
-	src: url("/fonts/radioapp.woff2") format("woff2");;
+	src: url("../fonts/radioapp.woff2") format("woff2");;
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
