--- a/src/radioapp.less
+++ b/src/radioapp.less
@@ -2,7 +2,7 @@
 <% } %><% if (fontfaceStyles) { %>
 @font-face {
 	font-family: "<%= fontFamilyName %>";
-	src: url("/fonts/radioapp.woff2") format("woff2");;
+	src: url("../fonts/radioapp.woff2") format("woff2");;
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
