--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,7 +17,18 @@ html(lang="ru")
 		.content
 			header
 				h1
-					|Radio test
+					|Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test
+				span.title-icons
+					span.title-icons-settings
+						include svg/settings.svg
+					span.title-icons-fullscreen
+						include svg/fullscreen.svg
+					span.title-icons-minimized
+						include svg/minimized.svg
+					span.title-icons-restored
+						include svg/settings.svg
+					span.title-icons-close
+						include svg/close.svg
 			main
 				#app.app
 			footer
