--- a/src/less/radiostation.less
+++ b/src/less/radiostation.less
@@ -8,7 +8,9 @@
 	font-family: 'Bender';
 	font-weight: 400;
 	user-select: none;
+	box-shadow: 0 0 1px #000;
 }
+
 
 img {
 	display: block;
@@ -17,6 +19,11 @@ img {
 
 .radiostation {
 	padding: 5px;
+	transition: background-color .3s ease;
+	background-color: rgba(255, 255, 255, 1);
+	&:hover {
+		background-color: rgba(0, 0, 0, .05);
+	}
 }
 
 .radio {
