--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,14 +10,14 @@ html(lang="ru")
 		meta(name="theme-color" content="#ffffff")
 		link(rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96")
 		link(rel="shortcut icon" href="favicon.ico")
-		link(type="text/css" rel="stylesheet" href="css/main.css?" + hash)
+		link(type="text/css" rel="stylesheet" href="css/main.css?" + hash_css)
 		title
 			|Radio test
 	body
 		.content
 			header
 				h1
-					|Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test Radio test
+					|Radio test Radio test Radio test Radio test Radio test Radio test
 				span.title-icons
 					span.title-icons-settings
 						include svg/settings.svg
@@ -39,5 +39,5 @@ html(lang="ru")
 						|ProjectSoft
 					=" "
 					|&copy; 2008 - all
-		script(src="js/radiostation.js?" + hash)
-		script(src="js/main.js?" + hash)
+		script(src="js/radiostation.js?" + hash_station)
+		script(src="js/main.js?" + hash_main)
